# Robolab

./: .gitignore  README.md  TODO.md  constants.py  main.py  pyproject.toml
artifacts/checkpoints/: model.ckpt
checkpoints/: model.ckpt
configs/: config.yaml
datasets/cifar10/: dataset.py
eval/: eval.py
model/: model.py
robolab/: __init__.py
robolab/configs/: __init__.py  config.py  config.yaml  hyperparameters.py  parameters.py
robolab/data/: __init__.py  dataset.py
robolab/eval/: __init__.py  __main__.py  eval.py
robolab/models/: __init__.py  convnet.py  model.py
robolab/test/: __init__.py  __main__.py  test.py
robolab/train/: __init__.py  __main__.py  train.py
robolab/utils/: __init__.py  helpers.py  logger.py
runs/convnet_cifar10/: events.out.tfevents.1779015831.fedora.11653.0  events.out.tfevents.1779018182.fedora.22899.0  events.out.tfevents.1779018241.fedora.23286.0  events.out.tfevents.1779018261.fedora.23645.0  events.out.tfevents.1779018267.fedora.23982.0  events.out.tfevents.1779168433.fedora.13714.0  events.out.tfevents.1779168556.fedora.14506.0  events.out.tfevents.1779168648.fedora.15629.0  events.out.tfevents.1779168738.fedora.16565.0  events.out.tfevents.1779170264.fedora.52614.0  events.out.tfevents.1779174724.fedora.66926.0  events.out.tfevents.1779175294.fedora.73797.0  events.out.tfevents.1779175503.fedora.75497.0  events.out.tfevents.1779175526.fedora.75896.0
src/: config.py
src/data/: __init__.py  dataset.py
src/eval/: __init__.py  (+2 more)
test/: test.py
tests/: test_config.py  test_eval.py  test_model.py
train/: train.py
(+11 files in other folders)
