[project]
name = "robolab"
version = "0.1.2"
description = "Image classification with ConvNet model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=15.0.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.setuptools.packages.find]
include = ["robolab*"]
